[WPE][Qt] String memory leak in WPEQtView.cpp https://bugs.webkit.org/show_bug.cgi?id=232435

Reviewed by Michael Catanzaro.

No new tests needed.

* UIProcess/API/wpe/qt/WPEQtView.cpp:
(jsAsyncReadyCallback): Remove unneeded usage of g_strdup(), and replace direct usage
of the QString constructor with QString::fromUtf8(), which better indicates that the
call will copy the string contents.



Canonical link: https://commits.webkit.org/243630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284983 268f45cc-cd09-0410-ab3c-d52691b4dbfc